--- a/source/_assets/css/button.pcss
+++ b/source/_assets/css/button.pcss
@@ -3,6 +3,8 @@
     .button {
         @apply
             /* Base */
+            inline-flex
+            relative
             cursor-pointer
             /* Content */
             py-2 px-4
@@ -10,12 +12,16 @@
             inline-flex
             items-center
             justify-center
+            select-none
+
             /*
              Default style
              */
             /* Default state */
             rounded
             border
+            border-solid
+            border-gray-300
             /* Hover */
             hover:border-gray-400
             /* Active */
