--- a/source/_assets/css/main.pcss
+++ b/source/_assets/css/main.pcss
@@ -3,6 +3,7 @@
 @import 'form.pcss';
 @import 'general.pcss';
 @import 'typography.pcss';
+@import 'iconicss-customized.css';
 
 /* Tailwind */
 @tailwind base;
