Add Font Awesome

--- a/source/_assets/css/main.pcss
+++ b/source/_assets/css/main.pcss
@@ -1,10 +1,23 @@
-/* Custom components */
+/*
+ Custom components
+ */
 @import 'button.pcss';
 @import 'form.pcss';
 @import 'general.pcss';
 @import 'typography.pcss';
 
-/* Tailwind */
+/*
+ Font Awesome icons
+ */
+@import "icons/fontawesome.css";
+@import "icons/light.css";
+@import "icons/regular.css";
+@import "icons/solid.css";
+@import "icons/brands.css";
+
+/*
+ Tailwind
+ */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
