Add transitions to input states

--- a/source/_assets/css/form.pcss
+++ b/source/_assets/css/form.pcss
@@ -63,6 +63,7 @@
             relative
             w-full
             max-w-full
+            transition
             /* Content */
             inline-flex
             items-center
