--- a/source/_assets/css/general.pcss
+++ b/source/_assets/css/general.pcss
@@ -1,5 +1,10 @@
 @layer components {
     .link {
-        @apply text-blue-600 no-underline hover:underline;
+        @apply
+            text-blue-600
+            no-underline
+            hover:underline
+            active:text-blue-800
+        ;
     }
 }
