--- a/source/_assets/css/typography.pcss
+++ b/source/_assets/css/typography.pcss
@@ -1,6 +1,7 @@
 @layer components {
+
     .title {
-        @apply mb-3.5;
+        @apply text-gray-900;
 
         &.is-1 {
             @apply text-4xl font-extrabold leading-tight;
@@ -9,4 +10,9 @@
             @apply text-2xl font-bold leading-snug;
         }
     }
+
+    strong {
+        @apply text-gray-800 font-bold;
+    }
+
 }
