Fix button y-padding

--- a/source/_assets/css/button.pcss
+++ b/source/_assets/css/button.pcss
@@ -11,7 +11,8 @@
             cursor-pointer
             transition
             /* Content */
-            py-2 px-4
+            /* py-2 */
+            px-4
             whitespace-nowrap
             inline-flex
             items-center
@@ -38,6 +39,9 @@
             focus:ring-blue-500
             focus:ring-opacity-25
         ;
+
+        padding-top: calc(0.5rem - 1px);
+        padding-bottom: calc(0.5rem - 1px);
     }
 
     /*
