--- a/source/_assets/css/typography.pcss
+++ b/source/_assets/css/typography.pcss
@@ -15,4 +15,7 @@
         @apply text-gray-800 font-bold;
     }
 
+    .figcaption {
+        @apply text-sm text-gray-500 last:mt-1 first:mb-1;
+    }
 }
