Add chevron icon class

--- a/source/_assets/css/main.pcss
+++ b/source/_assets/css/main.pcss
@@ -1,19 +1,20 @@
 /*
- Custom components
+ Custom classes
  */
 @import 'button.pcss';
 @import 'form.pcss';
 @import 'general.pcss';
 @import 'typography.pcss';
+@import 'elements.pcss';
 
 /*
  Font Awesome icons
  */
-@import "icons/fontawesome.css";
-@import "icons/light.css";
-@import "icons/regular.css";
-@import "icons/solid.css";
-@import "icons/brands.css";
+@import 'icons/fontawesome.css';
+@import 'icons/light.css';
+@import 'icons/regular.css';
+@import 'icons/solid.css';
+@import 'icons/brands.css';
 
 /*
  Tailwind
