Make transitions quicker

--- a/source/_assets/css/form.pcss
+++ b/source/_assets/css/form.pcss
@@ -64,6 +64,7 @@
             w-full
             max-w-full
             transition
+            duration-100
             /* Content */
             inline-flex
             items-center
