--- a/source/_assets/css/button.pcss
+++ b/source/_assets/css/button.pcss
@@ -10,6 +10,7 @@
             relative
             cursor-pointer
             transition
+            duration-100
             /* Content */
             /*py-2*/
             px-4
