--- a/source/_assets/css/main.pcss
+++ b/source/_assets/css/main.pcss
@@ -20,6 +20,7 @@
 @import 'icons/regular.css';
 @import 'icons/solid.css';
 @import 'icons/brands.css';
+@import 'icons/duotone.css';
 
 /*
  Tailwind
